# Interday-Trading

./: .env.example  .gitignore  AGENTS.md  GUIDEBOOK_DASHBOARD.md  README.md  bbri_marketdetector_sample.json  main.py  pyproject.toml
.codex/: config.toml
.streamlit/: config.toml
config/: bandar_tracker.json  schedule.json  screener.yml
docs/: audit_dead_fields_hybrid_screener.md  idx_screener_methodology.md  mcp_professional_workflow.md  p0_bpjs_implementation_report.md  p1_execution_backtest_report.md  p2_strategy_scoring_report.md  p3_reproducibility_report.md  prompt_templates.md
examples/: tickers.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: Install-InterdayWebStartup.ps1  Start-InterdayWeb.ps1  Stop-InterdayWeb.ps1  Uninstall-InterdayWebStartup.ps1  checkpoint_p1.py
tests/: conftest.py  test_backtest_ambiguous_policy.py  test_backtest_interday.py  test_bandar_tracker.py  test_bandarmology.py  test_bpjs_p0_foundation.py  test_commodity_gate.py  test_conftest_generators.py  test_hybrid_screener.py  test_journal.py  test_llm_analyst_evidence.py  test_llm_analyst_guardrails.py  test_llm_analyst_report.py  test_market_data_cache.py  test_mcp_server.py  test_metrics_classifier.py  test_monitor.py  test_orderbook_filter.py  test_p1_execution_portfolio.py  test_p2_strategies_ranking.py  test_p3_reproducibility.py  test_paper_bpjs.py  test_pipeline.py  test_point_in_time_stores_pipeline.py  test_recommendation.py  test_run_audit.py  test_scheduler.py  test_server_bandar_scan.py  test_server_recommendation.py  test_stage1_config_gates.py  test_stockbit_collector.py  test_technical.py  (+6 more)
(+125 files in other folders)
