[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interday-liquidity-screener"
version = "0.1.0"
description = "IDX liquidity screening CLI for the first stage of interday trading."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "streamlit>=1.36",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[project.scripts]
liquidity-screen = "interday_liquidity_screener.cli:main"
interday-dashboard = "interday_liquidity_screener.web_app:launch"
interday-web = "interday_liquidity_screener.server:launch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
